# advent-of-code

./: Cargo.toml  Dockerfile  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  docs.yml
benches/: year2015.rs  year2016.rs  year2017.rs  year2018.rs  year2019.rs  year2020.rs  year2021.rs  year2022.rs  year2023.rs  year2024.rs
src/: lib.rs  main.rs
src/y2015/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs
src/y2016/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d23.txt  d24.rs  d25.rs  mod.rs
src/y2017/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs
src/y2018/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d18.txt  d19.rs  d20.rs  d20.txt  d21.rs  d22.rs  d23.rs  d23.txt  d24.rs  d25.rs  mod.rs
src/y2019/: d01.rs  d02.rs  d03.rs  d04.rs  d04.txt  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d24.txt  d25.rs  intcode.rs  mod.rs
src/y2020/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d14.txt  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d23.txt  d24.rs  d25.rs  mod.rs
src/y2021/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs
src/y2022/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d10.rs  d16.rs  d17.rs  d23.rs  mod.rs
src/y2023/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d11.rs  d15.rs  d18.rs  d19.rs  d21.rs  mod.rs
src/y2024/: d01.rs  d09.rs  d12.rs  d14.rs  d20.rs  mod.rs
