[package]
name = "aoc"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.51"
fnv = "1.0.7"
hex = "0.4.3"
itertools = "0.10.3"
maplit = "1.0.2"
md-5 = "0.10.0"
num-integer = "0.1.44"
rayon = "1.5.1"
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3.5"
indoc = "1.0.3"

[[bench]]
name = "year2021"
harness = false

[[bench]]
name = "year2020"
harness = false

[[bench]]
name = "year2019"
harness = false

[[bench]]
name = "year2018"
harness = false

[[bench]]
name = "year2017"
harness = false

[[bench]]
name = "year2016"
harness = false

[[bench]]
name = "year2015"
harness = false
