[package]
name = "aoc"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
ahash = "0.8.2"
anyhow = "1.0.66"
hex = "0.4.3"
itertools = "0.10.5"
maplit = "1.0.2"
md-5 = "0.10.5"
num-integer = "0.1.45"
rayon = "1.6.0"
thiserror = "1.0.37"

[dev-dependencies]
criterion = "0.4.0"
indoc = "1.0.7"

[[bench]]
name = "year2022"
harness = false

[[bench]]
name = "year2021"
harness = false

[[bench]]
name = "year2020"
harness = false

[[bench]]
name = "year2019"
harness = false

[[bench]]
name = "year2018"
harness = false

[[bench]]
name = "year2017"
harness = false

[[bench]]
name = "year2016"
harness = false

[[bench]]
name = "year2015"
harness = false
